--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/backgroud2"
     tools:context=".loginActivity">
 
     <Button
         android:id="@+id/btnEntre3"
         android:layout_width="175dp"
         android:layout_height="60dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="104dp"
         android:backgroundTint="#69E8FD"
         android:text="Entre"
         android:textColor="#033EA5"
@@ -20,12 +20,13 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/btnEntre4"
         android:layout_width="175dp"
         android:layout_height="60dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#69E8FD"
         android:text="Voltar"
         android:textColor="#033EA5"
@@ -33,13 +34,13 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="574dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnEntre3" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="321dp"
         android:layout_height="113dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,5 +72,21 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="115dp"
+        android:layout_height="17dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/noto_sans"
+        android:text="Esqueci a senha"
+        android:textAlignment="center"
+        android:textColor="#0066FD"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
