--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -13,61 +13,48 @@
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="302dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="96dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="302dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="Confirme sua senha"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
-
-    <EditText
-        android:id="@+id/editTextText4"
+        android:id="@+id/editTxtLogin"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="302dp"
         android:layout_height="51dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
 
     <EditText
-        android:id="@+id/editTextText5"
+        android:id="@+id/editTxtSenha"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="302dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtLogin" />
 
     <Button
-        android:id="@+id/btnEntre5"
+        android:id="@+id/btnEntrar"
         android:layout_width="175dp"
         android:layout_height="51dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="96dp"
         android:backgroundTint="#69E8FD"
         android:text="Cadastre-se"
         android:textColor="#033EA5"
@@ -75,10 +62,10 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtSenha" />
 
     <Button
-        android:id="@+id/btnEntre6"
+        android:id="@+id/btnVoltar"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -89,7 +76,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEntre5" />
+        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />
 
     <ImageView
         android:id="@+id/imageView3"
