--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,15 +4,18 @@
 
     <item
         android:id="@+id/home"
-        android:title=""
+        android:enabled="false"
         android:icon="@drawable/baseline_home_24"
-        />
+        android:title=""
+        android:visible="true" />
     <item
         android:id="@+id/relogio"
+        android:icon="@drawable/relogio"
         android:title=""
-        android:icon="@drawable/relogio"/>
+        android:visible="true" />
     <item
         android:id="@+id/perfil"
+        android:icon="@drawable/perfil"
         android:title=""
-        android:icon="@drawable/perfil"/>
+        android:visible="true" />
 </menu>
