arrumando erro no menu

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".principalActivity">
+    tools:context=".PrincipalActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -62,8 +62,8 @@
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/navigationView"
-                android:layout_width="411dp"
-                android:layout_height="72dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="#0066FE"
                 app:itemIconTint="@color/white"
                 app:itemPaddingBottom="0dp"
