--- a/app/src/main/res/layout/fragment_relogio.xml
+++ b/app/src/main/res/layout/fragment_relogio.xml
@@ -6,25 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".relogioFragment">
 
+    <EditText
+        android:id="@+id/editTextNomeHorario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="124dp"
+        android:ems="10"
+        android:hint="Nome"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextHorario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:ems="10"
+        android:hint="Horario"
+        android:inputType="datetime|time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNomeHorario" />
 
     <Button
-        android:id="@+id/btnAdicionarHorario"
-        android:layout_width="60dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="44dp"
-        android:backgroundTint="#0066FE"
-        android:isScrollContainer="false"
-        android:paddingLeft="12.5dp"
-        android:paddingTop="0dp"
-        android:paddingEnd="0dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="0dp"
-        app:icon="@drawable/baseline_add_24"
-        app:iconPadding="0dp"
-        app:iconSize="35dp"
-        app:iconTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/btnCadastarEscovacao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:text="Cadastrar Escovação"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.879"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextHorario" />
 </androidx.constraintlayout.widget.ConstraintLayout>
