--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,26 @@
     tools:context=".loginActivity">
 
     <Button
+        android:id="@+id/btnVoltar"
+        android:layout_width="175dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="#69E8FD"
+        android:text="Voltar"
+        android:textColor="#033EA5"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
+        app:layout_constraintVertical_bias="0.038" />
+
+    <Button
         android:id="@+id/btnEntrar"
         android:layout_width="175dp"
         android:layout_height="60dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="88dp"
         android:backgroundTint="#69E8FD"
         android:text="Entre"
         android:textColor="#033EA5"
@@ -20,21 +36,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <Button
-        android:id="@+id/btnVoltar"
-        android:layout_width="175dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="#69E8FD"
-        android:text="Voltar"
-        android:textColor="#033EA5"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtSenha" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -51,7 +53,7 @@
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="300dp"
         android:layout_height="53dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="Login"
         android:inputType="text|textEmailAddress"
@@ -64,7 +66,7 @@
         android:id="@+id/editTxtSenha"
         android:layout_width="300dp"
         android:layout_height="53dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="176dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="text|textPassword"
@@ -72,21 +74,5 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="115dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/noto_sans"
-        android:text="Esqueci a senha"
-        android:textAlignment="center"
-        android:textColor="#0066FD"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.185"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTxtSenha" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
